[project]
name = "stephrobert-profile"
version = "0.2.0"
description = "Renders the GitHub profile README from a Jinja2 template"
authors = [{ name = "Stephane ROBERT", email = "robert.stephane.28@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
